--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,11 +51,12 @@
   <body>
     <h2>Welcome to the Home Page</h2>
     <div class="button-container">
-      <a href="/api/v1/auth/google">Google</a>
-      <a href="/api/v1/auth/login">Login</a>
-      <form action="/api/v1/auth/logout" method="post">
+      <a href="/auth/google">Google</a>
+      <a href="/auth/logout">Log out now</a>
+      <a href="/users">all users</a>
+      <!-- <form action="/api/v1/auth/logout" method="post">
         <button type="submit">Logout</button>
-      </form>
+      </form> -->
     </div>
   </body>
 </html>
